--- a/app/views/create-account/offence-details/add-creditor.html
+++ b/app/views/create-account/offence-details/add-creditor.html
@@ -13,6 +13,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      <span class="govuk-caption-l">Offence 1 ({{data['offenceCode']}})</span>
       <form method="post" novalidate action="check-imposition">
 
           {% set creditorMajor %}
