--- a/app/views/create-account/offence-details/add-offence.html
+++ b/app/views/create-account/offence-details/add-offence.html
@@ -33,6 +33,15 @@
           value: data['offenceCode']
         }) }}
 
+        <!-- <div class="govuk-inset-text">
+          <p class="govuk-body govuk-!-fon govuk-!-margin-bottom-1">
+            Offence title
+          </p>
+          <p class="govuk-body">
+          Riding a bicycle on a footpath  
+          </p>
+        </div> -->
+
         {{ govukDateInput({
           id: "sentenceDate",
           namePrefix: "sentenceDate",
