--- a/app/views/create-account/offence-details/check-imposition.html
+++ b/app/views/create-account/offence-details/check-imposition.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Check imposition" %}
+{% set pageName = "Check offence" %}
 
 {% block beforeContent %}
 
@@ -11,17 +11,68 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-three-quarters">
+    <div class="govuk-grid-column-full">
       
+      <!-- <span class="govuk-caption-l">{{data['offenceCode'] | upper}}</span> -->
       <h1 class="govuk-heading-l">{{pageName}}</h1>
 
-      <!-- <p class="govuk-body">Riding a bicycle on a footpath ({{data['offenceCode'] | upper}})</p>
-      <p class="govuk-body">Date of sentence: {{data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 March 2024"}}</p> -->
+      <!-- <span class="govuk-caption-l">Offence</span> -->
+      <!-- <p class="govuk-body">Impostion for "Riding a bicycle on a footpath ({{data['offenceCode'] | upper}})"</p> -->
+      <!-- <p class="govuk-body">Date of sentence: {{data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 March 2024"}}</p> -->
 
 
 
 
       {{ govukSummaryList({
+        card: {
+          title: {
+            text: "Offence" 
+          }
+        },
+        rows: [
+        {
+          key: {
+            text: "Offence"
+          },
+          value: {
+            html: 'Riding a bicycle on a footpath ' + '(' + data['offenceCode'] | upper + ')' or '(' + 'HY35014' + ')'
+          },
+          actions: {
+            items: [
+              {
+                href: "#",
+                text: "Change",
+                visuallyHiddenText: "offence"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Date of sentence"
+          },
+          value: {
+            html: data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 March 2024"
+          },
+          actions: {
+            items: [
+              {
+                href: "#",
+                text: "Change",
+                visuallyHiddenText: "date of sentence"
+              }
+            ]
+          }
+        }
+        ]
+      }) }}
+
+      {{ govukSummaryList({
+        card: {
+          title: {
+            text: "Impostion 1"
+          }
+        },
         rows: [
         {
           key: {
@@ -95,6 +146,11 @@
       }) }}
 
 
+      {{ govukButton({
+        text: "Add another imposition",
+        classes: "govuk-button--secondary",
+        href: "#"
+      }) }}
       
 
       
@@ -103,7 +159,7 @@
       <form method="post" novalidate action="check-offences">
 
 
-        {{ govukRadios({
+        <!-- {{ govukRadios({
           name: "addImposition2",
           fieldset: {
             legend: {
@@ -122,7 +178,7 @@
               text: "No"
             }
           ]
-        }) }}
+        }) }} -->
 
         
         {{ govukButton({
