Ready for testing

--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -56,7 +56,7 @@
             }
           },
           hint: {
-            text: "If sole trader, choose ‘Individual’’"
+            text: "If sole trader, choose ‘Individual’"
           },
           items: [
             {
