--- a/app/views/create-account/offence-details/add-imposition.html
+++ b/app/views/create-account/offence-details/add-imposition.html
@@ -18,7 +18,7 @@
         <p class="govuk-body govuk-!-margin-bottom-0">Date of sentence: {{data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 January 2024"}}</p>       -->
 
       <!-- <span class="govuk-caption-l">Riding a bicycle on a footpath ({{ data['offenceCode'] | upper or HY35014 }})</span> -->
-      <span class="govuk-caption-l">Offence 1 ({{data['offenceCode']}})</span>
+      <!-- <span class="govuk-caption-l">Offence 1 ({{data['offenceCode']}})</span> -->
       <h1 class="govuk-heading-l">{{pageName}}</h1>
     </div>
   </div>
