--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -35,8 +35,8 @@
               text: "Avon and Somerset"
             },
             {
-              value: "Bedfordshire",
-              text: "Bedfordshire"
+              value: "Cambridgeshire",
+              text: "Cambridgeshire"
             },
             {
               value: "North Wales",
