--- a/app/views/create-account/offence-details/check-imposition.html
+++ b/app/views/create-account/offence-details/check-imposition.html
@@ -70,7 +70,7 @@
       {{ govukSummaryList({
         card: {
           title: {
-            text: "Impostion 1"
+            text: "Imposition 1"
           }
         },
         rows: [
