--- a/app/views/create-account/court-details/enforcement-court.html
+++ b/app/views/create-account/court-details/enforcement-court.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Enforcment court" %}
+{% set pageName = "Enforcement court" %}
 
 {% block beforeContent %}
 
