--- a/app/views/create-account/offence-details/add-imposition.html
+++ b/app/views/create-account/offence-details/add-imposition.html
@@ -70,10 +70,6 @@
               {
                 value: "Crown Prosecution Costs (FCPC)",
                 text: "Crown Prosecution Costs (FCPC)"
-              },
-              {
-                value: "Forfeited recognizance (FFR)",
-                text: "Forfeited recognizance (FFR)"
               }
             ]
           }) }}
@@ -110,7 +106,7 @@
           name: "imposition",
           value: data['imposition'],
           label: {
-            text: "Imposition",
+            text: "Imposed",
             classes: "govuk-label--s"
           },
           prefix: {
