--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -65,7 +65,7 @@
             },
             {
               value: "Individual with parent to pay",
-              text: "Individual with parent to pay"
+              text: "Individual with parent or guardian to pay"
             },
             {
               value: "Company",
