--- a/app/views/create-account/offence-details/check-imposition.html
+++ b/app/views/create-account/offence-details/check-imposition.html
@@ -79,7 +79,7 @@
             text: "Result code"
           },
           value: {
-            html: data['resultCode']
+            html: data['resultCode'] or 'Fine only (FO)'
           },
           actions: {
             items: [
