--- a/app/views/create-account/offence-details/check-offences.html
+++ b/app/views/create-account/offence-details/check-offences.html
@@ -61,7 +61,7 @@
             text: "Impositions"
           },
           value: {
-            html: data['resultCode']
+            html: data['resultCode'] or 'Fine only (FO)'
           }
           }
         ]
