research error with parent to pay

--- a/app/views/create-account/offence-details/add-imposition.html
+++ b/app/views/create-account/offence-details/add-imposition.html
@@ -70,6 +70,10 @@
               {
                 value: "Crown Prosecution Costs (FCPC)",
                 text: "Crown Prosecution Costs (FCPC)"
+              },
+              {
+                value: "Forfeited recognizance (FFR)",
+                text: "Forfeited recognizance (FFR)"
               }
             ]
           }) }}
