--- a/app/views/create-account/court-details/sending-court.html
+++ b/app/views/create-account/court-details/sending-court.html
@@ -132,7 +132,7 @@
           hint: {
               text: "This is the reference that will be used in the acknowledgement letter"
           },
-          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing govuk-!-margin-bottom-0",
+          classes: "govuk-input--width-10 govuk-input--extra-letter-spacing",
           id: "ljaReferenceCode",
           name: "ljaReferenceCode",
           attributes: { "oninput": "updateCharacterCount()" }, 
