--- a/app/views/create-account/design-options/offence-details-option-b/confirm-offence.html
+++ b/app/views/create-account/design-options/offence-details-option-b/confirm-offence.html
@@ -33,7 +33,7 @@
       <p class="govuk-hint govuk-!-margin-bottom-1">
         Offence code: {{data['offenceCode'] | upper or 'HY35014'}}
       </p>
-      <p class="govuk-body govuk-!-margin-bottom-6">
+      <p class="govuk-body-l govuk-!-margin-bottom-6">
         Riding a bicycle on a footpath
       </p>
 
