--- a/app/views/create-account/design-options/offence-details-option-b/add-creditor.html
+++ b/app/views/create-account/design-options/offence-details-option-b/add-creditor.html
@@ -17,16 +17,96 @@
       <form method="post" novalidate action="check-imposition">
 
           {% set creditorMajor %}
-            {{ govukInput({
-              id: "majorCreditorName",
-              name: "majorCreditorName",
-              value: data['majorCreditorName'],
-              type: "text",
-              label: {
-                text: "Name or code of creditor",
-                classes: "govuk-label--s"
-              }
-            }) }}
+          {{ xGovukAutocomplete({
+            id: "majorCreditorName",
+            name: "majorCreditorName",
+            classes: "govuk-!-margin-bottom-8",
+            value: data['majorCreditorName'],
+            allowEmpty: false,
+            label: {
+              classes: "govuk-label--s",
+              text: 'Name or code of creditor'
+            },
+            items: [
+              { text: "Abellio Greater Anglia Ltd (AGAL)" },
+              { text: "Aldi (ALDI)" },
+              { text: "Anglia Trains (ANGL)" },
+              { text: "Asda (ASDA)" },
+              { text: "Bedford Borough Council (BEDB)" },
+              { text: "B & Q Stores (BNQL)" },
+              { text: "Boots (BOOT)" },
+              { text: "British Transport Police (BTPO)" },
+              { text: "Cambridge City Council (CAMC)" },
+              { text: "Charles & Ashby Revenue Ltd (CARV)" },
+              { text: "Cambs County Council Education (CBC1)" },
+              { text: "Cambridgeshire County Council. (CBCC)" },
+              { text: "Central Trains (CENT)" },
+              { text: "City of London Police (COLP)" },
+              { text: "Co-Operative Group (COP2)" },
+              { text: "Crown Prosecution Service (CPS)" },
+              { text: "DVLA (DVL2)" },
+              { text: "DVSA (DVSA)" },
+              { text: "DWP DM (DWP1)" },
+              { text: "East Cambs. District Council (ECDC)" },
+              { text: "Abellio East Midlands Ltd (EMT1)" },
+              { text: "Fenland District Council (FDC)" },
+              { text: "Govia Thameslink Railway Ltd (GTLR)" },
+              { text: "HMCTS (HMCS)" },
+              { text: "HM Revenue and Customs (HMRC)" },
+              { text: "Huntingdon District Council (HUDC)" },
+              { text: "Iceland Stores (ICE1)" },
+              { text: "Insolvency Service (INSS)" },
+              { text: "John Lewis Stores (JLEW)" },
+              { text: "Lidl Stores (LIDL)" },
+              { text: "London North Eastern Railway (LNER)" },
+              { text: "Merseyrail Electrics 2002 Ltd (METV)" },
+              { text: "Morrisons (MORR)" },
+              { text: "Marks and Spencer (MSP)" },
+              { text: "Next (NEXT)" },
+              { text: "NOMS (NOMS)" },
+              { text: "Environment Agency (NRA1)" },
+              { text: "Peterborough City Council (PCTC)" },
+              { text: "Poundland (PLD)" },
+              { text: "Metropolitan Police (PO01)" },
+              { text: "PCC for Merseyside (PO05)" },
+              { text: "PCC for North Yorkshire (PO12)" },
+              { text: "PCC for West Midlands (PO20)" },
+              { text: "PCC for Staffordshire (PO21)" },
+              { text: "PCC for Derbyshire (PO30)" },
+              { text: "PCC for Lincolnshire (PO32)" },
+              { text: "PCC for Leicestershire (PO33)" },
+              { text: "PCC for Northamptonshire (PO34)" },
+              { text: "PCC for Cambridgeshire (PO35)" },
+              { text: "PCC for Norfolk (PO36)" },
+              { text: "PCC for Suffolk (PO37)" },
+              { text: "PCC for Bedfordshire (PO40)" },
+              { text: "PCC for Hertfordshire (PO41)" },
+              { text: "PCC for Essex (PO42)" },
+              { text: "PCC for Thames Valley (PO43)" },
+              { text: "PCC for Hampshire (PO44)" },
+              { text: "PCC for Surrey (PO45)" },
+              { text: "PCC for Kent (PO46)" },
+              { text: "Sussex Police (PO47)" },
+              { text: "PCC for Avon & Somerset (PO52)" },
+              { text: "PCC for Wiltshire (PO54)" },
+              { text: "PCC for North Wales (PO60)" },
+              { text: "PCC for South Wales (PO62)" },
+              { text: "PCC for Dyfed Powys (PO63)" },
+              { text: "RSPCA (RSPC)" },
+              { text: "Sainsbury's (SAIN)" },
+              { text: "South Cambridge D C (SCDC)" },
+              { text: "Superdrug (SDRG)" },
+              { text: "Tesco (TESC)" },
+              { text: "Transport for London (TFL2)" },
+              { text: "TK Maxx (TKMX)" },
+              { text: "Transport Investigations Ltd (TRAN)" },
+              { text: "Capital Business Services Ltd (TVL3)" },
+              { text: "National Express Trains LTD (WAGN)" },
+              { text: "Wilkinson Stores (WILK)" },
+              { text: "Waitrose (WTRO)" }
+            ]
+          }) }}
+          
           {% endset -%}
         
           {{ govukRadios({
