--- a/app/views/create-account/offence-details/check-imposition.html
+++ b/app/views/create-account/offence-details/check-imposition.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Check offence" %}
+{% set pageName = "Check imposition" %}
 
 {% block beforeContent %}
 
@@ -10,69 +10,24 @@
 
 {% block content %}
 
+
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+    <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-l" >{{data['offenceCode'] | upper or 'HY35014'}}</span>
+      <h1 class="govuk-heading-l ">{{pageName}}</h1>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
       
       <!-- <span class="govuk-caption-l">{{data['offenceCode'] | upper}}</span> -->
-      <h1 class="govuk-heading-l">{{pageName}}</h1>
+      
 
       <!-- <span class="govuk-caption-l">Offence</span> -->
       <!-- <p class="govuk-body">Impostion for "Riding a bicycle on a footpath ({{data['offenceCode'] | upper}})"</p> -->
       <!-- <p class="govuk-body">Date of sentence: {{data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 March 2024"}}</p> -->
 
-
-
-
       {{ govukSummaryList({
-        card: {
-          title: {
-            text: "Offence" 
-          }
-        },
-        rows: [
-        {
-          key: {
-            text: "Offence"
-          },
-          value: {
-            html: 'Riding a bicycle on a footpath ' + '(' + data['offenceCode'] | upper + ')' or '(' + 'HY35014' + ')'
-          },
-          actions: {
-            items: [
-              {
-                href: "#",
-                text: "Change",
-                visuallyHiddenText: "offence"
-              }
-            ]
-          }
-        },
-        {
-          key: {
-            text: "Date of sentence"
-          },
-          value: {
-            html: data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 March 2024"
-          },
-          actions: {
-            items: [
-              {
-                href: "#",
-                text: "Change",
-                visuallyHiddenText: "date of sentence"
-              }
-            ]
-          }
-        }
-        ]
-      }) }}
-
-      {{ govukSummaryList({
-        card: {
-          title: {
-            text: "Imposition 1"
-          }
-        },
         rows: [
         {
           key: {
@@ -96,7 +51,7 @@
             text: "Imposition"
           },
           value: {
-            html: '£' + data['imposition'] if data['imposition'] else '£250.00'
+            html: data['imposition'] | currency if data['imposition'] else '£250.00'
           },
           actions: {
             items: [
@@ -113,7 +68,7 @@
             text: "Paid so far"
           },
           value: {
-            html: '£' + data['paidSoFar'] if data['paidSoFar'] else '£0.00'
+            html: data['paidSoFar'] | currency if data['paidSoFar'] else '£0.00'
           },
           actions: {
             items: [
@@ -130,7 +85,7 @@
             text: "Creditor"
           },
           value: {
-            html: data['majorCreditorName'] + ' (Major creditor)' if (data['creditor'] == "Major creditor") else data['creditor']
+            html: data['creditor']
           },
           actions: {
             items: [
@@ -141,16 +96,33 @@
               }
             ]
           }
-        }
+        },
+        {
+          key: {
+            text: "Major creditor"
+          },
+          value: {
+            html: data['majorCreditorName'] if (data['creditor'] == "Major creditor") else data['creditor']
+          },
+          actions: {
+            items: [
+              {
+                href: "add-creditor",
+                text: "Change",
+                visuallyHiddenText: "creditor"
+              }
+            ]
+          }
+        } if (data['creditor'] == "Major creditor")
         ]
       }) }}
 
 
-      {{ govukButton({
+      <!-- {{ govukButton({
         text: "Add another imposition",
         classes: "govuk-button--secondary",
         href: "#"
-      }) }}
+      }) }} -->
       
 
       
@@ -159,7 +131,7 @@
       <form method="post" novalidate action="check-offences">
 
 
-        <!-- {{ govukRadios({
+        {{ govukRadios({
           name: "addImposition2",
           fieldset: {
             legend: {
@@ -175,10 +147,10 @@
             },
             {
               value: "No",
-              text: "No"
+              text: "No – review offence"
             }
           ]
-        }) }} -->
+        }) }}
 
         
         {{ govukButton({
