--- a/app/views/create-account/offence-details/check-offences.html
+++ b/app/views/create-account/offence-details/check-offences.html
@@ -1,14 +1,17 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName = "Check offence details" %}
+{% set pageName = "Check offence" %}
 
 {% block beforeContent %}
 
-{% if data['offences-check-answers'] == 'true'%}
+<!-- {% if data['offences-check-answers'] == 'true'%}
   <a href="../task-list.html" class="govuk-back-link">Back</a>
 {% else %}
   <a href="check-imposition.html" class="govuk-back-link">Back</a>
-{% endif %}
+{% endif %} -->
+
+<a href="check-imposition.html" class="govuk-back-link">Back</a>
+
 
 {% endblock %}
 
@@ -28,8 +31,7 @@
             items: [
               {
                 href: "check-imposition",
-                text: "Change",
-                visuallyHiddenText: "offence"
+                text: "Add another imposition" 
               },
               {
                 href: "#",
@@ -42,26 +44,58 @@
         rows: [
         {
           key: {
-            text: "Offence"
-          },
-          value: {
-            html: 'Riding a bicycle on a footpath ' + '(' + data['offenceCode'] | upper + ')' or '(' + 'HY35014' + ')'
-          }
-        },
-        {
-          key: {
             text: "Date of sentence"
           },
           value: {
             html: data['sentenceDate-day'] + ' ' + data['sentenceDate-month'] | monthName + ' ' + data['sentenceDate-year'] if data['sentenceDate-day'] and data['sentenceDate-month'] and data['sentenceDate-year'] else "12 March 2024"
+          },
+          actions: {
+            items: [
+              {
+                href: "add-offence",
+                text: "Change",
+                visuallyHiddenText: "offence"
+              }
+            ]
           }
         },
         {
           key: {
-            text: "Impositions"
+            text: "Offence"
           },
           value: {
-            html: data['resultCode'] or 'Fine only (FO)'
+            html: 'Riding a bicycle on a footpath ' + '(' + data['offenceCode'] | upper + ')' or '(' + 'HY35014' + ')'
+          },
+          actions: {
+            items: [
+              {
+                href: "add-offence",
+                text: "Change",
+                visuallyHiddenText: "offence"
+              }
+            ]
+          }
+        },
+        {
+          key: {
+            text: "Imposition 1"
+          },
+          value: {
+            html: data['resultCode']
+          },
+          actions: {
+            items: [
+              {
+                href: "remove-imposition",
+                text: "Remove",
+                visuallyHiddenText: "imposition"
+              },
+              {
+                href: "check-imposition",
+                text: "Change",
+                visuallyHiddenText: "imposition"
+              }
+            ]
           }
           }
         ]
