--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -56,16 +56,16 @@
             }
           },
           hint: {
-            text: "If sole trader, choose ‘Individual’"
+            text: "If sole trader, choose 'Adult or youth only'"
           },
           items: [
             {
               value: "Individual only",
-              text: "Individual only"
+              text: "Adult or youth only"
             },
             {
               value: "Individual with parent to pay",
-              text: "Individual with parent or guardian to pay"
+              text: "Adult or youth with parent or guardian to pay"
             },
             {
               value: "Company",
